add-column/event-event_entry_deadline

--- a/app/views/public/customers/edit.html.haml
+++ b/app/views/public/customers/edit.html.haml
@@ -34,6 +34,8 @@
               autocomplete: "email",
               placeholder: "メールアドレスを入力",
               class: 'form-control'
+              %i.text-red
+                ※メール変更後、受信メールにて承認して変更完了となります。
           %tr
             %th{scope:"row"} 性別
             %td
