--- a/app/views/public/events/_form.html.haml
+++ b/app/views/public/events/_form.html.haml
@@ -52,6 +52,13 @@
               = f.datetime_field :event_end_time, style: "width:260px"
           %tr
             %th{scope:"row"}
+              参加締切日
+              %i.text-red
+                (必須)
+            %td
+              = f.datetime_field :event_entry_deadline, style: "width:260px"
+          %tr
+            %th{scope:"row"}
               参加費用
               %i.text-red
                 (必須)
