--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -174,6 +174,12 @@
                             %h2.complete-caption
                               楽曲成立🎵
                             = render "song_info", song: song, i: i
+              - if @event.event_entry_deadline.present?
+                %tr
+                  %th{scope:"row"} 参加締切日
+                  %td
+                    = l @event.event_entry_deadline, format: :short
+                    まで🙏
               %tr
                 %th{scope:"row"} 参加フォーム
                 %td
