--- a/app/views/public/events/index.html.haml
+++ b/app/views/public/events/index.html.haml
@@ -29,18 +29,28 @@
           %h6.card-subtitle
             %b 開催日(開始時間)
             %br
+            <i class="fa-regular fa-clock"></i>
             = l event.event_start_time, format: :short
             %hr
             %b 開催日(終了時間)
             %br
+            <i class="fa-solid fa-clock"></i>
             = l event.event_end_time, format: :short
             %hr
+            %b 参加締切日
+            %br
+            <i class="fa-solid fa-clock-rotate-left"></i>
+            = l event.event_entry_deadline, format: :short
+            %hr
+            <i class="fa-solid fa-sack-dollar"></i>
             %b 参加費用
             = event.entrance_fee.to_s + "円"
             %hr
+            <i class="fa-solid fa-earth-asia"></i>
             %b 開催場所
             = event.place
             %hr
+            <i class="fa-solid fa-people-group"></i>
             %b 参加人数
             :ruby
               joined_member_ids = []
@@ -59,9 +69,10 @@
               %hr
               = link_to '編集する', edit_public_event_path(event), data: { 'turbolinks': false }, class: "btn btn-success event-show-link"
           %p.card-text
-            %hr
-            [イベント作成者]
-            %br
+            .center
+              %hr
+              [イベント作成者]
+              %br
             .event-owner-img
               = link_to public_customer_path(@owner), data: { 'turbolinks': false } do
                 - if @owner.profile_image.present?
