--- a/app/views/public/events/_form.html.haml
+++ b/app/views/public/events/_form.html.haml
@@ -59,6 +59,11 @@
               = f.datetime_field :event_entry_deadline, style: "width:260px"
           %tr
             %th{scope:"row"}
+              曲リクエスト締切日
+            %td
+              = f.datetime_field :request_deadline, style: "width:260px"
+          %tr
+            %th{scope:"row"}
               参加費用
               %i.text-red
                 (必須)
