--- a/app/views/public/homes/top.html.haml
+++ b/app/views/public/homes/top.html.haml
@@ -17,3 +17,7 @@
         %li
           %i.fa-solid.fa-right-to-bracket
           = link_to "ログイン", new_customer_session_path, data: { 'turbolinks': false }, class: "btn btn-primary menu-sp-btn"
+  .parallax
+    .parallax-content
+      %h2
+        🎤好き（音楽）で繋がるコミュニティ🎸
