feature/event-copy

--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -602,3 +602,15 @@ input[type="text"] {
     border-radius: 10px;
   }
 }
+
+.event-copy-title{
+  width: 90%;
+  text-align: center;
+  margin: 0 auto;
+  .alert{
+    text-align: center;
+    color: red;
+    border: solid 1px red;
+    border-radius: 10px;
+  }
+}
