--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -3,16 +3,11 @@
   .event-show-title
     %h2 イベント詳細
     .event-show-follow
-      - if @owner == current_customer
-        = link_to '編集する', edit_public_event_path(@event, community_id: @event.community_id), data: { 'turbolinks': false }, class: "btn btn-sm btn-success event-show-btn"
-        = link_to 'コピー作成', copy_public_events_path(event_id: @event.id, community_id: @event.community_id), data: { 'turbolinks': false }, class: "btn btn-sm btn-secondary event-show-btn"
-        = link_to '参加する🎵', '#event-songs', data: { 'turbolinks': false }, class: "btn btn-sm btn-info event-show-btn"
-      - else
-        = link_to '参加する🎵', '#event-songs', data: { 'turbolinks': false }, class: "btn btn-sm btn-info event-show-btn"
-        .event-request-icon
-          = link_to '#event-request', class: "request-icon-text", data: { 'turbolinks': false } do
-            %i.fa-regular.fa-comments.request-icon
-            リクエストする
+      = link_to '参加する🎵', '#event-songs', data: { 'turbolinks': false }, class: "btn btn-sm btn-info event-show-btn"
+      .event-request-icon
+        = link_to '#event-request', class: "request-icon-text", data: { 'turbolinks': false } do
+          %i.fa-regular.fa-comments.request-icon
+          リクエストする
 
   .event-show-container.px-0.px-sm-0
     .row
@@ -76,6 +71,15 @@
                 %th{scope:"row"} イベント名
                 %td
                   = @event.event_name
+              - if @owner == current_customer
+                %tr
+                  %th{scope:"row"} 編集
+                  %td
+                    = link_to 'このイベントの内容を編集する', edit_public_event_path(@event, community_id: @event.community_id), data: { 'turbolinks': false }, class: "btn btn-sm btn-success event-show-btn"
+                %tr
+                  %th{scope:"row"} コピー
+                  %td
+                    = link_to 'コピーして新規にイベントを作成する', copy_public_events_path(event_id: @event.id, community_id: @event.community_id), data: { 'turbolinks': false }, class: "btn btn-sm btn-secondary event-show-btn"
               %tr
                 %th{scope:"row"} 最終更新日
                 %td
