--- a/app/assets/stylesheets/layouts/error_message.scss.erb
+++ b/app/assets/stylesheets/layouts/error_message.scss.erb
@@ -1,6 +1,6 @@
 .error-alert {
-  color:#262626; 
-  background:#FFEBE8;
+  color: white; 
+  background: red;
   text-align: center;
   border:2px solid #990000;
   padding:12px; font-weight:850;
