--- a/app/assets/stylesheets/public/homes/top.scss
+++ b/app/assets/stylesheets/public/homes/top.scss
@@ -12,7 +12,7 @@
 
 .customer-menu-top {
   display: block;
-  width: 400px;
+  width: 300px;
   height: 50px;
   margin: 0 auto;
   border: 1px solid white;
@@ -31,14 +31,14 @@
   margin: 0 auto;
   width:90%;
   height:500px;
-}
-.images{
-  width: 100%;
-  border-radius: 10px;
-}
-.slider {
-  opacity: 0;
-  transition: opacity .25s ease;
+  .slider {
+    opacity: 0;
+    transition: opacity .25s ease;
+    .images{
+      width: 100%;
+      border-radius: 10px;
+    }
+  }
 }
 .slider.slick-initialized {
   opacity: 1;
@@ -51,20 +51,24 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.parallax-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column;
-  background-color: rgba(0, 0, 0, 0.5);
-  h2{
-    color: white;
-    font-weight: bold;
+  .parallax-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    background-color: rgba(0, 0, 0, 0.5);
+    h4{
+      color: white;
+      font-weight: bold;
+    }
   }
+}
+
+@media (min-width: 600px) {
+
 }
