--- a/app/assets/stylesheets/public/homes/top.scss
+++ b/app/assets/stylesheets/public/homes/top.scss
@@ -32,6 +32,7 @@
   width:90%;
   height:500px;
   .slider {
+    margin-top: 5px;
     opacity: 0;
     transition: opacity .25s ease;
     .images{
@@ -46,8 +47,11 @@
 
 .parallax {
   position: relative;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
   background-image: url('enjoy_music.jpg');
-  height: 250px;
+  height: 200px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
