--- a/app/views/public/homes/top.html.haml
+++ b/app/views/public/homes/top.html.haml
@@ -4,7 +4,7 @@
   .parallax
     .parallax-content
       %h4
-        🎵[好き]で繋がるコミュニティ🎵
+        🎸[好き]で繋がるコミュニティ🎸
         %br
       - unless customer_signed_in?
         .customer-menu-top
