--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -18,14 +18,10 @@
 .event-index-container{
   position: relative;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
-  .card {
-    width: 250px;
-    margin: 0px;
-    box-sizing: border-box;
-  }
   .event-community-name{
     text-align: center;
     font-weight: bold;
